Complete CRUD USER

--- a/ToeicOnlineAdminApp/Views/User/Index.cshtml
+++ b/ToeicOnlineAdminApp/Views/User/Index.cshtml
@@ -38,7 +38,7 @@
                                     <td>
                                         @Html.ActionLink("Sửa", "Edit", new { id = items.Id }) |
                                         @Html.ActionLink("Xem", "Details", new { id = items.Id }) |
-                                        @Html.ActionLink("Xóa", "Delete", new { id = items.Id }) |
+                                        <a href="/User/Delete/@items.Id"> Delete </a> |
                                         @Html.ActionLink("Gán quyền", "RoleAssign", new { id = items.Id })
                                     </td>
                                 </tr>
