--- a/ToeicOnlineAdminApp/Views/Login/Index.cshtml
+++ b/ToeicOnlineAdminApp/Views/Login/Index.cshtml
@@ -77,7 +77,7 @@
                                         <a class="small" href="forgot-password.html">Forgot Password?</a>
                                     </div>
                                     <div class="text-center">
-                                        <a class="small" asp-action="SignIn" asp-controller="Login">Create an Account!</a>
+                                        <a class="small" asp-action="Register" asp-controller="Login">Create an Account!</a>
                                     </div>
                                 </div>
                             </div>
