--- a/ToeicOnlineAdminApp/Views/Login/Register.cshtml
+++ b/ToeicOnlineAdminApp/Views/Login/Register.cshtml
@@ -37,7 +37,7 @@
                             <div class="text-center">
                                 <h1 class="h4 text-gray-900 mb-4">Create an Account!</h1>
                             </div>
-                            <form class="user" asp-action="SignIn" asp-controller="Login" method="post">
+                            <form class="user" asp-action="Register" asp-controller="Login" method="post">
                                 <div class="form-group row">
                                     <div class="col-sm-6 mb-3 mb-sm-0">
                                         <input type="text" class="form-control form-control-user" asp-for="FirstName" placeholder="First Name">
