--- a/ToeicOnlineAdminApp/Views/User/Index.cshtml
+++ b/ToeicOnlineAdminApp/Views/User/Index.cshtml
@@ -13,7 +13,39 @@
     <div class="card-body">
         <div class="table-responsive">
             <div id="dataTable_wrapper" class="dataTables_wrapper dt-bootstrap4">
-                <div class="row"><div class="col-sm-12 col-md-6"><div class="dataTables_length" id="dataTable_length"><label>Show <select name="dataTable_length" aria-controls="dataTable" class="custom-select custom-select-sm form-control form-control-sm"><option value="10">10</option><option value="25">25</option><option value="50">50</option><option value="100">100</option></select> entries</label></div></div><div class="col-sm-12 col-md-6"><div id="dataTable_filter" class="dataTables_filter"><label>Search:<input type="search" class="form-control form-control-sm" placeholder="" aria-controls="dataTable"></label></div></div></div><div class="row">
+                <div class="row"><div class="col-sm-12 col-md-6">
+                    <div class="dataTables_length" id="dataTable_length">
+                    <label>Show
+                        <select name="dataTable_length" aria-controls="dataTable" class="custom-select custom-select-sm form-control form-control-sm">
+                        <option value="10">10</option>
+                        <option value="25">25</option>
+                        <option value="50">50</option>
+                        <option value="100">100</option>
+                         </select>
+                        entries
+                    </label>
+                        </div>
+                     </div>
+                <div class="col-sm-12 col-md-6">
+                    <div id="dataTable_filter" class="dataTables_filter">
+                        <label>
+                            Search:
+                        </label>
+                        <form asp-action="Index" method="get">
+                            <div class="row">
+                                <div class="col-md-7">
+                                    <input type="text" name="keyword" value="@ViewBag.Keyword" class="form-control form-control-sm" placeholder="" aria-controls="dataTable">
+                                </div>
+                                <div class="col-md-5">
+                                    <button type="submit" class="btn btn-success">Search</button>
+                                    <button type="button" class="btn btn-dark" onclick="window.location.href='/User/Index'">Reset</button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+                    </div>
+                <div class="row">
                     <div class="col-sm-12">
                         <table class="table table-bordered dataTable" id="dataTable" width="100%" cellspacing="0" role="grid" aria-describedby="dataTable_info" style="width: 100%;">
                             <thead>
