--- a/ToeicOnlineAdminApp/Views/User/Index.cshtml
+++ b/ToeicOnlineAdminApp/Views/User/Index.cshtml
@@ -6,6 +6,14 @@
     ViewData["Title"] = "List Users";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+@section scripts {
+    <script>
+        setTimeout(function () {
+            $('#alertMsg').fadeOut('slow');
+
+        }, 2000);
+    </script>
+}
 <div class="card shadow mb-4">
     <div class="card-header py-3">
         <h6 class="m-0 font-weight-bold text-primary">DataTables Example</h6>
@@ -13,38 +21,46 @@
     <div class="card-body">
         <div class="table-responsive">
             <div id="dataTable_wrapper" class="dataTables_wrapper dt-bootstrap4">
-                <div class="row"><div class="col-sm-12 col-md-6">
-                    <div class="dataTables_length" id="dataTable_length">
-                    <label>Show
-                        <select name="dataTable_length" aria-controls="dataTable" class="custom-select custom-select-sm form-control form-control-sm">
-                        <option value="10">10</option>
-                        <option value="25">25</option>
-                        <option value="50">50</option>
-                        <option value="100">100</option>
-                         </select>
-                        entries
-                    </label>
+                <div class="row">
+                    <div class="col-sm-12 col-md-6">
+                        <div class="dataTables_length" id="dataTable_length">
+                            <label>
+                                Show
+                                <select name="dataTable_length" aria-controls="dataTable" class="custom-select custom-select-sm form-control form-control-sm">
+                                    <option value="10">10</option>
+                                    <option value="25">25</option>
+                                    <option value="50">50</option>
+                                    <option value="100">100</option>
+                                </select>
+                                entries
+                            </label>
                         </div>
-                     </div>
-                <div class="col-sm-12 col-md-6">
-                    <div id="dataTable_filter" class="dataTables_filter">
-                        <label>
-                            Search:
-                        </label>
-                        <form asp-action="Index" method="get">
-                            <div class="row">
-                                <div class="col-md-7">
-                                    <input type="text" name="keyword" value="@ViewBag.Keyword" class="form-control form-control-sm" placeholder="" aria-controls="dataTable">
+                    </div>
+                    <div class="col-sm-12 col-md-6">
+                        <div id="dataTable_filter" class="dataTables_filter">
+                            <label>
+                                Search:
+                            </label>
+                            <form asp-action="Index" method="get">
+                                <div class="row">
+                                    <div class="col-md-7">
+                                        <input type="text" name="keyword" value="@ViewBag.Keyword" class="form-control form-control-sm" placeholder="" aria-controls="dataTable">
+                                    </div>
+                                    <div class="col-md-5">
+                                        <button type="submit" class="btn btn-success">Search</button>
+                                        <button type="button" class="btn btn-dark" onclick="window.location.href='/User/Index'">Reset</button>
+                                    </div>
                                 </div>
-                                <div class="col-md-5">
-                                    <button type="submit" class="btn btn-success">Search</button>
-                                    <button type="button" class="btn btn-dark" onclick="window.location.href='/User/Index'">Reset</button>
-                                </div>
-                            </div>
-                        </form>
+                            </form>
+                        </div>
                     </div>
                 </div>
+                @if (ViewBag.SuccessMsg != null)
+                {
+                    <div id="alertMsg" class="alert alert-success" role="alert">
+                        @ViewBag.SuccessMsg
                     </div>
+                }
                 <div class="row">
                     <div class="col-sm-12">
                         <table class="table table-bordered dataTable" id="dataTable" width="100%" cellspacing="0" role="grid" aria-describedby="dataTable_info" style="width: 100%;">
@@ -59,37 +75,37 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                @foreach(var items in Model.Items )
+                                @foreach (var items in Model.Items)
                                 {
-                                <tr role="row" class="odd">
-                                    <td class="sorting_1">@items.LastName</td>
-                                    <td>@items.FirstName</td>
-                                    <td>@items.Email</td>
-                                    <td>@items.PhoneNumber</td>
-                                    <td>@items.UserName</td>
-                                    <td>
-                                        @Html.ActionLink("Sửa", "Edit", new { id = items.Id }) |
-                                        @Html.ActionLink("Xem", "Details", new { id = items.Id }) |
-                                        <a href="/User/Delete/@items.Id"> Delete </a> |
-                                        @Html.ActionLink("Gán quyền", "RoleAssign", new { id = items.Id })
-                                    </td>
-                                </tr>
+                                    <tr role="row" class="odd">
+                                        <td class="sorting_1">@items.LastName</td>
+                                        <td>@items.FirstName</td>
+                                        <td>@items.Email</td>
+                                        <td>@items.PhoneNumber</td>
+                                        <td>@items.UserName</td>
+                                        <td>
+                                            @Html.ActionLink("Sửa", "Edit", new { id = items.Id }) |
+                                            @Html.ActionLink("Xem", "Details", new { id = items.Id }) |
+                                            <a href="/User/Delete/@items.Id"> Delete </a> |
+                                            @Html.ActionLink("Gán quyền", "RoleAssign", new { id = items.Id })
+                                        </td>
+                                    </tr>
                                 }
-                                  
+
                             </tbody>
                         </table>
                     </div>
                 </div>
                 <div class="row">
-                <div class="col-sm-12 col-md-5">
-                    <div class="dataTables_info" id="dataTable_info" role="status" aria-live="polite">Showing 1 to 10 of 57 entries</div>
+                    <div class="col-sm-12 col-md-5">
+                        <div class="dataTables_info" id="dataTable_info" role="status" aria-live="polite">Showing 1 to 10 of 57 entries</div>
                     </div>
-                <div class="col-sm-12 col-md-7">
-                    <div class="dataTables_paginate paging_simple_numbers" id="dataTable_paginate">
-                        @await Component.InvokeAsync("Pager", Model)
+                    <div class="col-sm-12 col-md-7">
+                        <div class="dataTables_paginate paging_simple_numbers" id="dataTable_paginate">
+                            @await Component.InvokeAsync("Pager", Model)
+                        </div>
+
                     </div>
-                    
-                </div>
                 </div>
             </div>
         </div>
